sre-cloud-project/apps/app3/k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app3
spec:
  hosts:
  - app3
  http:
  - route:
    - destination:
        host: app3
        port:
          number: 80
